erDiagram
    USER {
        id uuid PK
        username string
        email string UK
        hashed_password string
        created_at datetime
        updated_at datetime
        is_active boolean
        is_superuser boolean
    }

    LOBBY {
        id uuid PK
        name string
        code string UK
        game_id uuid FK
        host_id uuid FK
        status enum "waiting | running | paused | ended"
        phase enum "none | suggestion | round | validation"
        max_players int
        created_at datetime
        expires_at datetime
    }

    ROUND {
        id uuid PK
        lobby_id uuid FK
        round_number int
        status enum "running | finished"
        started_at datetime
        ended_at datetime "nullable"
    }

    GAME {
        id uuid PK
        name string
        description string
        image_url string
        min_players int
        max_players int
        created_at datetime
        updated_at datetime
        tags string[]
        game_type enum "mission | role | hybrid"
    }

    MISSION {
        id uuid PK
        game_id uuid FK
        title string
        created_by uuid FK "nullable"
        type enum "mission | role | hybrid"
        description text
        image_url string "nullable"
        difficulty int
    }

    PLAYER {
        id uuid PK
        lobby_id uuid FK
        user_id uuid FK
        score int
        status enum "waiting | playing | completed | left"
        joined_at datetime
        left_at datetime "nullable"
    }

    MISSION_PLAYER {
        id uuid PK
        player_id uuid FK
        mission_id uuid FK
        status enum "active|completed|failed|cancelled"
        assigned_at datetime
        completed_at datetime "nullable"
    }

    %% Relations
    USER ||--o{ LOBBY : "hosts"
    USER ||--o{ PLAYER : "participates"
    USER ||--o{ MISSION : "creates"
    LOBBY ||--o{ PLAYER : "contains"
    LOBBY ||--o{ ROUND : "has"
    LOBBY }o--|| GAME : "uses"
    GAME ||--o{ MISSION : "has"
    PLAYER ||--o{ MISSION_PLAYER : "has"
    MISSION }o--o{ MISSION_PLAYER : "assigned_to"
